# ChangeLog for sys-block/gparted
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-block/gparted/ChangeLog,v 1.127 2013/08/02 11:35:51 maekke Exp $

  02 Aug 2013; Markus Meier <maekke@gentoo.org> gparted-0.16.1.ebuild:
  add ~arm, bug #473474

  23 Jul 2013; Vicente Olivert Riera <vincent@gentoo.org> gparted-0.16.1.ebuild:
  added ppc keyword, bug #473474

*gparted-0.16.1 (10 May 2013)

  10 May 2013; Gilles Dartiguelongue <eva@gentoo.org> +gparted-0.16.1.ebuild,
  metadata.xml:
  Version bump, bug #462676.

  09 Apr 2013; Samuli Suominen <ssuominen@gentoo.org> gparted-0.14.1.ebuild:
  Remove sys-fs/device-mapper from || () syntax in favour of sys-fs/lvm2 wrt
  #461382

  09 Apr 2013; Samuli Suominen <ssuominen@gentoo.org> -gparted-0.12.0.ebuild,
  -gparted-0.14.0.ebuild:
  old

  25 Mar 2013; Agostino Sarubbo <ago@gentoo.org> gparted-0.14.1.ebuild:
  Stable for x86, wrt bug #458984

  25 Mar 2013; Agostino Sarubbo <ago@gentoo.org> gparted-0.14.1.ebuild:
  Stable for amd64, wrt bug #458984

*gparted-0.14.1 (13 Jan 2013)

  13 Jan 2013; Pacho Ramos <pacho@gentoo.org> +files/gparted-pkexec,
  +files/org.gentoo.pkexec.gparted.policy, +gparted-0.14.1.ebuild,
  -gparted-0.11.0.ebuild, -gparted-0.13.1.ebuild:
  Version bump, fix pkexec usage to make it work (#450544 by Carlos Silva),
  remove old.

  02 Dec 2012; Samuli Suominen <ssuominen@gentoo.org> gparted-0.11.0.ebuild,
  gparted-0.12.0.ebuild, gparted-0.13.1.ebuild, gparted-0.14.0.ebuild:
  Use virtual/udev instead of sys-fs/udev wrt #444398

*gparted-0.14.0 (04 Nov 2012)

  04 Nov 2012; Gilles Dartiguelongue <eva@gentoo.org> +gparted-0.14.0.ebuild:
  Version bump, bug #439856. Enable su replacement through pkexec, bug #425156.

*gparted-0.13.1 (31 Aug 2012)

  31 Aug 2012; Gilles Dartiguelongue <eva@gentoo.org> +gparted-0.13.1.ebuild:
  Version bump, bug #416797.

  03 May 2012; Jeff Horelick <jdhore@gentoo.org> gparted-0.11.0.ebuild,