@@ -1,6 +1,9 @@
 # ChangeLog for sys-block/gparted
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-block/gparted/ChangeLog,v 1.127 2013/08/02 11:35:51 maekke Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-block/gparted/ChangeLog,v 1.128 2013/09/29 10:01:31 pacho Exp $
+
+  29 Sep 2013; Pacho Ramos <pacho@gentoo.org> gparted-0.16.1.ebuild:
+  Drop usage of deprecated gksu
 
   02 Aug 2013; Markus Meier <maekke@gentoo.org> gparted-0.16.1.ebuild:
   add ~arm, bug #473474
